--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>May the Force be with you.</title>
+    <title>Que la Fuerza te acompañe.</title>
 
     <link
       rel="icon"
